--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.1",
     "multer": "^2.0.2",
+    "otplib": "^12.0.1",
+    "qrcode": "^1.5.4",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
