--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "multer": "^2.0.2",
     "otplib": "^12.0.1",
     "qrcode": "^1.5.4",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
